--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    
+
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Landing Page</title>
@@ -11,7 +11,29 @@
 </head>
 
 <body>
-
+    <div class="Header">
+        <div class="Headertop">
+            <div class="header logo">Header logo</div>
+            <ul>
+                <li><a href='#'>header link one</a></li>
+                <li><a href='#'>header link two</a></li>
+                <li><a href='#'>header link three</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="headerbody">
+        <div class="hbleft">
+            <div class="title">
+                This website is awesome
+            </div>
+            <div class="titlesub">
+                This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast
+            </div>
+            <button>
+                Sign Up
+            </button>
+        </div>
+    </div>
 
 </body>
 
