--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
 <body>
     <div class="Header">
         <div class="Headertop">
-            <div class="header logo">Header logo</div>
+            <div class="header-logo">Header logo</div>
             <ul>
                 <li><a href='#'>header link one</a></li>
                 <li><a href='#'>header link two</a></li>
                 <li><a href='#'>header link three</a></li>
             </ul>
-        </div>
     </div>
-    <div class="headerbody">
+    <div class="Header-body">
         <div class="hbleft">
             <div class="title">
                 This website is awesome
@@ -33,8 +32,55 @@
                 Sign Up
             </button>
         </div>
+        <div class="hbright">
+            <img src="https://as2.ftcdn.net/v2/jpg/06/00/29/31/1000_F_600293132_ga9MNAmuqWekuv8ztM9XUc3I2XlbjQJV.jpg"/>
+        </div>
     </div>
 
+    </div>
+    <div class="section2">
+        <div class="h2">Some random information</div>
+        <div class="boxes">
+            <div>
+                <div class="square">Square</div>
+                <span>This is some subtext under an illustration or image</span>
+            </div>
+            <div>
+                <div class="square">Square</div>
+                <span>This is some subtext under an illustration or image</span>
+            </div>
+            <div>
+                <div class="square">Square</div>
+                <span>This is some subtext under an illustration or image</span>
+            </div>
+            <div>
+                <div class="square">Square</div>
+                <span>This is some subtext under an illustration or image</span>
+            </div>
+        </div>
+     </div>
+     <div class="section3">
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just fillung up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. </p>
+        <span class="quote-author">-Thor, God of Thunder</span>
+     </div>
+     <div class="section4">
+        <div class="call-action">
+            <div>
+                <h5>
+                    Call to action! It's time!
+                </h5>
+                <span>
+                    Sign up for our product by clicking that button right over there!
+                </span>
+            </div>
+            <button class="call-action-button">
+                Sign up
+            </button>
+        </div>
+     </div>
+     <div class="footer">
+        <span>Copyright &copy; The Odin Project 2024</span>
+     </div>   
 </body>
 
 </html>
